--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -8,6 +8,14 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-* {
-  letter-spacing: normal !important;
+#nprogress .spinner {
+  display: none !important;
+}
+
+#nprogress .bar {
+  background: #db2777 !important;
+}
+
+#nprogress .peg {
+  box-shadow: 0 0 10px #db2777, 0 0 5px #9333ea !important;
 }
